@@ -67,6 +67,6 @@ B&auml;renreiter
 <p>
 
 
-<p>
+<p align=right>
 Next: <a href=typography-features.html>Cool features</a>,
 typographical hoops that we made LilyPond jump through.
