@@ -41,5 +41,6 @@ use to produce their symbol is changed during the music fragment:
 
 </ul>
 
-Note: <a href=benchmarking.html>Man is the measure of things</a>: is
+<p align=right>
+Next: <a href=benchmarking.html>Man is the measure of things</a>: is
 a flexible architecture enough?
