@@ -87,7 +87,7 @@ Score context:
 
 <p align=center>
 <img src=@IMAGES@engraver-score.png>
-<p>
 
+<p align=right>
 Next: <a href=engraving.html>The art of stamping</a>:
 how <em>did</em> they make hand-made music? 
