@@ -49,9 +49,8 @@ unsatisfactory:
 Clearly, there is a need for a flexible architecture. The architecture
 should encompass formatting rules, typographical style and individual
 formatting decisions.
-<p>
 
-
+<p align=right>
 Next: <a href="formatting-architecture.html">Program architecture,
 your flexible friend</a>: tuning, tweaking and developing  typography
 rules.
